[package]
name = "axum1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
httpc-test = "0.1.10"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["fs"] }

[dev-dependencies]
anyhow = "1.0.89"
httpc-test = "0.1.10"
